# Homework21.2

./: catalog.html  category_1.html  contacts.html  main.html  pyproject.toml  server.py
